--- a/src/app/inbox/page.module.css
+++ b/src/app/inbox/page.module.css
@@ -1,4 +1,3 @@
-
 .default_bg{
   width: 80%;
   display: flex;
@@ -45,19 +44,14 @@
   display: flex;
   flex-wrap: wrap;
   min-height: 350px;
-  max-height: 100vh;
+  justify-content: center;
 }
 .inboxPack .all{
   flex: 1;
-}
-.inboxPack .all{
-  top: 10vh;
   gap: 15px;
   display: flex;
   padding: 10px;
-  position: sticky;
   max-width: 425px;
-  height: fit-content;
   flex-direction: column;
 }
 .inboxPack .default_bg{
@@ -69,7 +63,7 @@
   width: 100%;
   display: flex;
   cursor: pointer;
-  transition: 0.3s;
+  transition: 0.5s;
   font-weight: 600;
   padding: 10px 20px;
   border-radius: 25px;
@@ -103,11 +97,13 @@
 }
 .inboxPack .one{
   flex: 1;
-  gap: 15px;
-  height: 100%;
+  top: 10vh;
   display: flex;
+  position: sticky;
+  transition: 0.5s;
   min-width: 400px;
-  max-height: 1200px;
+  max-width: 600px;
+  max-height: 90vh;
   border-radius: 15px;
   align-items: stretch;
   flex-direction: column;
@@ -119,33 +115,34 @@
   gap: 10px;
   display: flex;
   padding: 0 5px;
-  font-weight: 600;
+  font-size: 20px;
   min-height: 40px;
+  font-weight: 600;
+  transition: 0.5s;
   align-items: center;
-  margin-inline: 10px;
   color: var(--translucent);
   justify-content: flex-end;
   border-bottom: solid var(--translucent) 1px;
 }
 .inboxPack .input{
-  gap: 15px;
-  width: 90%;
+  gap: 0 10px;
+  padding: 5px;
   border: none;
-  align-self: center;
+  flex-wrap: wrap;
   border-radius: 16px;
+  margin-inline: 10px;
+  align-self: flex-end;
+  color: rgb( 50, 50, 50);
+  width: calc(100% - 20px);
   background-color: rgba(245, 225, 215, 0.526);
-  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.28), 0 0 15px var(--mild-dark);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.28), 0 3px 15px var(--mild-dark);
 }
 .inboxPack .section{
   flex: 1;
   gap: 15px;
   display: flex;
-  padding-top: 5px;
   overflow-y: auto;
-  min-height: 500px;
   overflow-x: hidden;
-  position: relative;
-  height: fit-content;
   flex-direction: column;
   &::-webkit-scrollbar {
     width: 8px;
@@ -182,34 +179,35 @@
   gap: 5px;
   opacity: 0;
   z-index: 2;
-  width: 100%;
   border: none;
   display: flex;
-  inset-inline: 0;
+  font-size: 15px;
   padding: 10px 0;
+  min-width: 165px;
   transition: 0.5s;
   max-width: 700px;
+  max-width: 260px;
+  width: fit-content;
   position: absolute;
   border-radius: 10px;
   pointer-events: none;
   top: calc(50% + 10px);
-  min-width: fit-content;
   flex-direction: column;
   background-color: var(--primary);
-  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.15), transparent);
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.282), 0 0px 3px rgba(0, 0, 0, 0.282);
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.15), transparent);
 }
 .inboxPack .hidden{
-  min-width: 165px;
+  align-items: start;
+  padding-inline: 15px;
   inset-inline: auto 20px;
 }
-.inboxPack .hidden.inView{
-  opacity: 1;
-  z-index: 4;
-  pointer-events: all;
-  top: calc(100% + 10px);
+.inboxPack .hidden span{
+  width: 100%;
+  text-align: start;
 }
-.inView .details{
+.inView .details,
+.inboxPack .hidden.inView{
   opacity: 1;
   z-index: 4;
   pointer-events: all;
@@ -276,13 +274,10 @@
   border-bottom-left-radius: 100%;
   box-shadow: 5px -2px 6px 3px  var(--sweetRed), inset 2px -2px 3px rgba(0, 0, 0, 0.15);
 }
-.inboxPack input{
-  flex: 1;
+.inboxPack textarea{
   width: 100%;
-  height: 32px;
-  padding-inline: 10px;
+  min-height: 32px;
   border-radius: 10px 0 0 10px;
-  border-right: solid var(--strong) 1px;
 }
 .inboxPack .one a,
 .inboxPack .one button{
@@ -297,13 +292,8 @@
 .inboxPack .one button:hover{
   background-color: var(--mild-dark);
 }
-.inboxPack .hidden{
-  min-width: 165px;
-  inset-inline: auto 20px;
-}
-.inboxPack .hidden.inView{
-  opacity: 1;
-  z-index: 4;
-  pointer-events: all;
-  top: calc(100% + 10px);
+@media screen and (max-width: 500px) {
+  .inboxPack .one{
+    min-width: 250px;
+  }
 }
