--- a/src/app/settings/page.module.css
+++ b/src/app/settings/page.module.css
@@ -287,8 +287,9 @@
 @media screen and (max-width: 650px) {
   .updator{
     top: auto;
-    width: 100vw;
+    width: 100%;
     padding: 10px;
+    inset-inline: 0;
     transition: 0.5s;
     padding-bottom: 0;
     min-height: 300px;
