--- a/src/app/main.module.css
+++ b/src/app/main.module.css
@@ -2,6 +2,7 @@
   display: flex;
   transition: 0.5s;
   justify-content: center;
+  max-width: calc( 100% - 80px );
 }
 .main{
   gap: 20px;
@@ -77,7 +78,8 @@
 .default_bg h3 p{
   font-weight: 600;
   font-size: 0.8em;
-}.title{
+}
+.title{
   display: flex;
   transition: 0.3s;
   column-gap: 15px;
@@ -111,35 +113,49 @@
   color: var(--translucent);
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.282), 0 0px 3px rgba(0, 0, 0, 0.282);
 }
+.help a:hover,
 .quick a:hover,
+.help button:hover,
 .quick button:hover{
   background-color: var(--sweetRed);
 }
 .help{
+  gap: 10px;
   display: flex;
   padding: 5px 0;
-  column-gap: 20px;
   width: fit-content;
   flex-direction: row;
 }
 .help a,
+.help span,
 .help button,
 #searchbar menu span{
-  flex: 1;
   display: flex;
-  column-gap: 5px;
+  cursor: pointer;
+  column-gap: 10px;
   font-weight: 600;
-  padding: 7px 10px;
+  padding: 5px 15px;
   position: relative;
   white-space: nowrap;
   border-radius: 25px;
   color: var(--translucent);
 }
+.help a,
+.help span,
+.help button{
+  align-items: center;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.282), 0 0px 3px rgba(0, 0, 0, 0.282)
+}
+.help div span,
+.help div button{
+  box-shadow: none;
+  align-items: center;
+}
 .help div,
 #searchbar div{
   gap: 5px;
   opacity: 0;
-  z-index: 2;
+  z-index: 1;
   display: flex;
   padding: 10px;
   transition: 0.5s;
@@ -151,6 +167,9 @@
   flex-direction: column;
   background-color: var(--primary);
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.28), 0 0 10px var(--mild-dark);
+}
+.help div{
+  padding: 3px;
 }
 .help .inView div,
 #searchbar .inView div{
@@ -393,6 +412,7 @@
 }
 @media screen and (max-width: 500px) {
   #main{
+    max-width: none;
     font-size: 0.9em;
   }
 }
