--- a/src/app/recovery/page.module.css
+++ b/src/app/recovery/page.module.css
@@ -63,10 +63,11 @@
   top: calc( 100% + 10px );
 }
 .autoFill span{
-  width: 50vw;
+  width: 60vw;
   display: flex;
   max-width: 100%;
   box-shadow: none;
+  pointer-events: none;
   align-items: flex-start;
   color: rgb( 50, 50, 50);
 }
@@ -86,7 +87,7 @@
   width: 100%;
   padding: 30px;
   display: flex;
-  max-width: 650px;
+  max-width: 705px;
   align-items: center;
   border-radius: 10px;
   padding-bottom: 20px;
@@ -108,7 +109,7 @@
   color: var(--changingPurple);
 }
 .form button{
-  gap: 10px;
+  gap: 5px;
   opacity: 0.9;
   display: flex;
   cursor: pointer;
@@ -124,7 +125,7 @@
 }
 .form div,
 .form section{
-  gap: 15px 25px;
+  gap: 15px;
   width: 85%;
   display: flex;
   flex-wrap: wrap;
@@ -162,7 +163,7 @@
   padding-right: 35px !important;
 }
 .form div span{
-  width: 110px;
+  width: 120px;
   overflow: hidden;
   transition: 0.5s;
   white-space: nowrap;
@@ -171,12 +172,21 @@
   width: fit-content;
 }
 @media screen and (max-width: 500px) {
+  #fill{
+    margin-right: 30px;
+  }
   .form div,
   .form section{
     width: 90%;
   }
 }
 @media screen and (max-width: 350px) {
+  #fill{
+    margin-right: 15px;
+  }
+  .form{
+    padding: 15px;
+  }
   .form div span{
     width: 0;
   }
