--- a/src/app/contact/page.module.css
+++ b/src/app/contact/page.module.css
@@ -187,6 +187,209 @@
   opacity: 1;
   width: 20px;
 }
+.error{
+  width: 90%;
+  font-weight: 600;
+  align-self: center;
+  color: var(--error);
+}
+.mask{
+  inset: 0;
+  z-index: 2;
+  position: fixed;
+  background-color: rgb(0, 0, 0 ,0.15);
+}
+.pass{
+  gap: 10px;
+  display: flex;
+  padding: 20px;
+  font-size: 15px;
+  transition: 0.5s;
+  min-height: 125px;
+  border-radius: 25px;
+  flex-direction: column;
+  color: var(--translucent);
+  background-color: var(--noti);
+  justify-content: space-between;
+  border-bottom-right-radius: 5px;
+  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.282)
+}
+.pass p{
+  display: flex;
+  font-weight: 600;
+  justify-content: space-between;
+}
+.pass div{
+  gap: 15px;
+  display: flex;
+}
+.pass .button{
+  gap: 10px;
+  font-weight: 600;
+  transition: 0.5s;
+  padding: 5px 10px;
+  border-radius: 25px;
+  border-bottom-left-radius: 5px;
+  background-color: var(--brilliant);
+  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.282)
+}
+.pass section{
+  gap: 10px;
+  display: flex;
+  padding-top: 15px;
+  flex-direction: column;
+}
+.all{
+  gap: 10px;
+  width: 60%;
+  z-index: 2;
+  right: 30px;
+  bottom: 100px;
+  padding: 20px;
+  display: flex;
+  font-size: 15px;
+  position: fixed;
+  transition: 0.5s;
+  min-width: 330px;
+  max-height: 60vh;
+  max-width: 525px;
+  min-height: 250px;
+  border-radius: 25px;
+  flex-direction: column;
+  color: rgb( 50, 50, 50);
+  border-bottom-left-radius: 5px;
+  background-color: var(--pageNav);
+  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.282)
+}
+.input{
+  gap: 10px;
+  width: 100%;
+  display: flex;
+  transition: 0.5s;
+  font-weight: 600;
+  transition: 0.5s;
+  align-self: center;
+  border-radius: 20px;
+  justify-content: flex-end;
+  border-bottom-right-radius: 5px;
+  border: solid var(--sweetPurple) 2px;
+}
+.input:hover,
+.input:focus{
+  scale: 1.03;
+}
+.input p{
+  top: -10px;
+  right: 20px;
+  font-weight: 600;
+  transition: 0.5s;
+  position: absolute;
+  padding-inline: 15px;
+  pointer-events: none;
+  background-color: var(--pageNav);
+}
+.input input,
+.input textarea{
+  flex: 1;
+  width: 100%;
+  padding-left: 25px;
+  padding: 5px 15px !important;
+}
+.input span{
+  right: -30px;
+  cursor: pointer;
+  position: absolute;
+  border-radius: 100%;
+  bottom: calc( 50% - 11px);
+}
+.input span:hover {
+  background-color: var(--mild-dark);
+}
+.password{
+  width: 95%;
+  padding: 3px;
+  margin: auto;
+  column-gap: 2px;
+  font-weight: 600;
+  max-width: 700px;
+  border-radius: 30px;
+  align-self: flex-end;
+  border-bottom-right-radius: 7px;
+  border: solid var(--sweetPurple) 2px;
+  box-shadow: 0 3px 10px rgb(0, 0, 0 ,0.15);
+}
+.password input{
+  flex: 1;
+  width: 100%;
+  padding: 5px 15px;
+  border-radius: inherit;
+}
+.updator .input:hover{
+  box-shadow: inset 0 3px 5px rgb(0, 0, 0 ,0.1);
+}
+.all .input textarea{
+  min-height: 40px;
+}
+.all section{
+  gap: 15px;
+  display: flex;
+  margin-top: 10px;
+  padding-top: 10px;
+  flex-direction: column;
+  border-top: solid var(--sweetPurple) 2px;
+}
+.all section .input{
+  width: calc( 100% - 20px );
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 17px;
+  box-shadow: 0 3px 10px rgb(0, 0, 0 ,0.15);
+}
+.all .cancel{
+  top: 5px;
+  left: 5px;
+  width: 25px;
+  height: 25px;
+  display: grid;
+  position: absolute;
+  align-items: center;
+  border-radius: 100%;
+  justify-content: center;
+  background-color: var(--mild-dark);
+}
+.all .cancel svg{
+  padding: 6px;
+}
+.all .button{
+  transition: 0.3s;
+  padding: 5px 25px;
+  border-radius: 25px;
+  align-self: flex-end;
+  color: rgb(255, 245, 213);
+  border-bottom-left-radius: 8px;
+  background-color: var(--compliment);
+}
+.all .button svg{
+  top: 5px;
+  width: 15px;
+  right: 30px;
+  transition: 0.75s;
+  position: absolute;
+}
+.all .button svg path{
+  opacity: 0;
+  fill: white;
+  transition: 0.15s;
+}
+.all .button:hover{
+  padding-right: 40px;
+  color: rgb(255, 255, 255);
+}
+.all .button:hover svg{
+  transform: translateX(20px);
+}
+.all .button:hover svg path{
+  opacity: 1;
+}
 
 /* not-found-page css */
 .notFound a,
