--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -172,9 +172,7 @@ input:-internal-autofill-selected{
 }
 .notify{
   z-index: 1;
-  width: 80%;
   border: solid 2px;
-  max-width: fit-content;
 }
 @keyframes notify {
   0%{
@@ -438,7 +436,7 @@ header{
 nav{
   flex: 0;
   display: flex;
-  min-width: 60px;
+  min-width: 65px;
   transition: 0.5s;
   align-items: center;
   justify-content: right;
@@ -527,7 +525,7 @@ nav.msg .holdr{
   translate: -67%;
 }
 nav .pagenav .hidden{
-  gap: 5px;
+  gap: 10px;
   opacity: 0;
   z-index: 2;
   border: none;
@@ -600,6 +598,7 @@ nav .pagenav .contact{
 }
 nav .pagenav .bar{
   gap: 10px;
+  z-index: 2;
   display: flex;
   padding: 0 5px;
   font-size: 20px;
@@ -616,16 +615,19 @@ nav .pagenav .inbox .input{
   flex-wrap: wrap;
   border-radius: 16px;
   align-self: flex-end;
-  width: calc(100% - 20px);
+  width: calc(100% - 10px);
   background-color: rgba(245, 225, 215, 0.526);
 }
 nav .pagenav .inbox .section{
   flex: 1;
-  gap: 15px;
+  gap: 3px;
   height: 100%;
   display: flex;
   overflow-y: auto;
   overflow-x: hidden;
+  padding-block: 20px;
+  scrollbar-width: 7px;
+  scrollbar-color: rgba(0, 0, 0, 0.15);
   flex-direction: column;
   &::-webkit-scrollbar {
     width: 7px;
