--- a/src/app/inbox/page.module.css
+++ b/src/app/inbox/page.module.css
@@ -70,8 +70,10 @@
   white-space: nowrap;
   flex-direction: column;
   color: var(--deepSweetPurple);
-  background-color: var(--pageNav);
+  border-bottom-left-radius: 5px;
+  background-color: var(--notifications);
   box-shadow: 0 5px 10px rgb(0, 0, 0 ,0.15);
+  background-image: linear-gradient(to top right, rgba(0, 0, 0, 0.15), transparent);
 }
 .inboxPack .all section h2{
   gap: 15px;
@@ -101,18 +103,22 @@
   display: flex;
   position: sticky;
   transition: 0.5s;
+  font-size: 14px;
   min-width: 400px;
   max-width: 600px;
   max-height: 90vh;
-  border-radius: 15px;
+  min-height: 450px;
+  border-radius: 20px;
   align-items: stretch;
   flex-direction: column;
   padding-block: 5px 15px;
+  border-bottom-right-radius: 5px;
   background-color: var(--sweetRed);
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.28), 0 10px 15px var(--mild-dark);
 }
 .inboxPack .bar{
   gap: 10px;
+  z-index: 1;
   display: flex;
   padding: 0 5px;
   font-size: 20px;
@@ -139,7 +145,8 @@
 }
 .inboxPack .section{
   flex: 1;
-  gap: 15px;
+  gap: 5px;
+  padding: 10px;
   display: flex;
   overflow-y: auto;
   overflow-x: hidden;
@@ -162,17 +169,42 @@
     background-color: rgb(129, 91, 65); 
   }
 }
+.sent, .received,
 .inboxPack .one .section section{
   gap: 3px;
   display: flex;
   align-items: start;
-  padding-inline: 20px 0;
+  padding-inline: 5px 0;
   flex-direction: column;
 }
+.sent p,
+.received p,
 .inboxPack .one .section section p{
+  gap: 7.5px;
+  height: 0px;
   opacity: 0.9;
+  display: flex;
   font-size: 10px;
-  font-weight: 600;
+  transition: 0.5s;
+  font-weight: 500;
+  overflow: hidden;
+  align-items: center;
+  padding-inline: 7px;
+  transition-delay: 0.2s;
+}
+.sent p svg,
+.received p svg,
+.inboxPack .one .section section p svg{
+  width: 15px;
+  height: 15px;
+}
+.sent p button,
+.received p button,
+.inboxPack .one .section section p button{
+  min-width: 0;
+  padding: 3px;
+  border-radius: 7px;
+  height: fit-content;
 }
 .details,
 .inboxPack .hidden{
@@ -202,8 +234,23 @@
   padding-inline: 15px;
   inset-inline: auto 20px;
 }
+.date{
+  cursor: default;
+  font-weight: 500;
+  margin: 10px auto;
+  padding: 5px 15px;
+  border-radius: 7px;
+  width: fit-content;
+  color: var(--translucent);
+  background-color: var(--primary);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.282), 0 0px 3px rgba(0, 0, 0, 0.282);
+}
+.sent span,
+.received span,
 .inboxPack .hidden span{
   width: 100%;
+  font-size: 14px;
+  font-weight: 500;
   text-align: start;
 }
 .inView .details,
@@ -213,50 +260,86 @@
   pointer-events: all;
   top: calc(100% + 10px);
 }
+.received,
 .inboxPack .one .section .received{
+  margin-right: 0;
   align-items: end;
-  padding-inline: 0 20px;
+  padding-inline: 0 5px;
 }
+.sent span,
+.received span,
 .inboxPack .one .section span{
-  padding: 10px;
-  min-width: 60px;
-  border-radius: 25px;
-  word-break: break-all;
-  border-bottom-left-radius: 0;
+  cursor: default;
+  min-width: 100px;
+  padding: 7.5px 10px;
+  border-radius: 20px;
+  word-break: break-word;
   background-color: var(--notifications);
-  box-shadow: 0 1px 10px rgba(0, 0, 0, 0.3), 0 0 3px rgba(160, 31, 31, 0.2);
+  box-shadow: 0 1px 7px rgba(8, 5, 5, 0.3), 0 0 3px rgba(160, 31, 31, 0.2);
 }
+.received span,
 .inboxPack .one .section .received span{
+  background-color: var(--natural);
+}
+.sent .last span,
+.inboxPack .one .section .last span{
+  border-bottom-left-radius: 0;
+}
+.received .last span,
+.inboxPack .one .section .received .last span{
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 25px;
 }
+.sent div,
+.received div,
 .inboxPack .one .section section div{
-  display: grid;
-  max-width: calc(60% + 30px);
-  grid-template-columns: 7px 1fr;
+  display: flex;
+  margin-left: 7px;
+  max-width: calc(75% + 30px);
 }
+.last,
+.inboxPack .one .section section div.last{
+  margin-left: 0;
+}
+.sent p:hover,
+.received p:hover,
+.sent div:hover + p,
+.received div:hover + p,
+.inboxPack .one .section section p:hover,
+.inboxPack .one .section section div:hover + p{
+  height: 20px;
+}
+.last + p,
+.inboxPack .one .section section .last + p{
+  height: 20px;
+}
+.received div,
 .inboxPack .one .section .received div{
   display: flex;
   flex-direction: row-reverse;
 }
-.inboxPack .one .section section div::before{
+.last::before,
+.inboxPack .one .section section div.last::before{
   z-index: 1;
   width: 7px;
   content: '';
   height: 20px;
   min-width: 7px;
+  transition: 0.5s;
   align-self: flex-end;
   display: inline-block;
   background-color: var(--notifications);
   box-shadow: -6px 1px 8px rgba(0, 0, 0, 0.3);
 }
-.inboxPack .one .section section div::after{
+.last::after,
+.inboxPack .one .section section div.last::after{
   bottom: 0;
   left: -3px;
   z-index: 1;
   content: '';
   width: 10px;
   height: 25px;
+  transition: 0.5s;
   position: absolute;
   align-self: flex-end;
   display: inline-block;
@@ -264,15 +347,33 @@
   background-color: var(--sweetRed);
   box-shadow: -5px -2px 6px 3px  var(--sweetRed), inset -2px -2px 3px rgba(0, 0, 0, 0.15);
 }
-.inboxPack .one .section .received div::before{
-  box-shadow: 6px 1px 8px rgba(0, 0, 0, 0.3);
+.received .last::before,
+.inboxPack .one .section .received div.last::before{
+  background-color: var(--natural);
+  box-shadow: 7px 2px 6px 3px var(--sweetRed), inset -2px 2px 3px rgba(0, 0, 0, .15), 2px 3px 4px rgba(0, 0, 0, 0.3);
 }
-.inboxPack .one .section .received div::after{
+.last::after{
+  box-shadow: -5px 2px 6px 3px  var(--pageNav), inset -2px 2px 3px rgba(0, 0, 0, 0.15);
+}
+.received .last::after,
+.inboxPack .one .section .received div.last::after{
   left: auto;
   right: -3px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 100%;
   box-shadow: 5px -2px 6px 3px  var(--sweetRed), inset 2px -2px 3px rgba(0, 0, 0, 0.15);
+}
+.received .last::after{
+  background-color: var(--pageNav);
+  box-shadow: 5px -2px 6px 3px  var(--pageNav), inset 2px -2px 3px rgba(0, 0, 0, 0.15);
+}
+.sent .last::after{
+  background-color: var(--pageNav);
+  box-shadow: inset -4px -1 2px rgba(0, 0, 0, 0.15);
+  background-image: linear-gradient(to left, rgba(0, 0, 0, 0.1));
+}
+.sent .last::before{
+  box-shadow: -1px 1px 1px rgba(0, 0, 0, 0.3);
 }
 .inboxPack textarea{
   width: 100%;
