--- a/src/app/inbox/page.module.css
+++ b/src/app/inbox/page.module.css
@@ -345,7 +345,7 @@
   display: inline-block;
   border-bottom-right-radius: 100%;
   background-color: var(--sweetRed);
-  box-shadow: -5px -2px 6px 3px  var(--sweetRed), inset -2px -2px 3px rgba(0, 0, 0, 0.15);
+  box-shadow: -5px -2px 6px var(--sweetRed), inset -2px -2px 3px rgba(0, 0, 0, 0.15);
 }
 .received .last::before,
 .inboxPack .one .section .received div.last::before{
@@ -365,11 +365,11 @@
 }
 .received .last::after{
   background-color: var(--pageNav);
-  box-shadow: 5px -2px 6px 3px  var(--pageNav), inset 2px -2px 3px rgba(0, 0, 0, 0.15);
+  box-shadow: 4px -2px 2px var(--pageNav), inset 2px -2px 2px rgba(0, 0, 0, 0.15);
 }
 .sent .last::after{
   background-color: var(--pageNav);
-  box-shadow: inset -4px -1 2px rgba(0, 0, 0, 0.15);
+  box-shadow: inset -3px -2px 2px rgba(0, 0, 0, 0.15);
   background-image: linear-gradient(to left, rgba(0, 0, 0, 0.1));
 }
 .sent .last::before{
