--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -64,9 +64,9 @@ body{
   flex-wrap: wrap;
   font-size: 15px;
   min-width: 285px;
+  transition: 0.5s;
   min-height: 100vh;
   flex-direction: column;
-  transition: 0.5s ease;
   background-color: var(--background);
 }
 body::selection{
