--- a/src/app/(auth)/page.module.css
+++ b/src/app/(auth)/page.module.css
@@ -107,15 +107,18 @@
 .verify{
   gap: 20px;
   z-index: 5;
+  width: 80%;
+  inset: 25% 0;
   padding: 20px;
   display: flex;
-  inset: 25% 15%;
   position: fixed;
   max-width: 700px;
   min-width: 250px;
   font-weight: 500;
-  min-height: 150px;
+  min-height: 325px;
+  text-align: center;
   align-items: center;
+  justify-self: center;
   flex-direction: column;
   justify-content: space-around;
   border-radius: 25px 10px 10px;
@@ -129,8 +132,8 @@
   width: 95%;
   padding: 3px;
   column-gap: 2px;
-  font-weight: 600;
   max-width: 700px;
+  font-weight: 600;
   border-radius: 30px;
   border-bottom-right-radius: 7px;
   border: solid var(--sweetPurple) 2px;
@@ -168,6 +171,12 @@
   .options button{
     column-gap: 15px;
     padding-inline: 15px;
+  }
+  .verify{
+    padding: 20px 15px;
+  }
+  .verify .password{
+    width: 100%;
   }
 }
 @media screen and (max-width: 350px) {
