--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -96,7 +96,9 @@ a{
 svg{
   width: 23px;
   height: 23px;
+  min-width: 23px;
   aspect-ratio: 1;
+  min-height: 23px;
   fill: currentColor;
   pointer-events: none;
   display: inline-block;
@@ -256,6 +258,7 @@ header{
   display: flex;
   padding: 0 10px;
   column-gap: 15px;
+  white-space: nowrap;
   align-items: center;
   color: var(--translucent);
 }
@@ -491,6 +494,7 @@ nav .links svg{
   flex: 1;
   width: 25px;
   height: 25px;
+  transition: 0.5s;
 }
 nav .pagenav{
   flex: 1;
@@ -554,9 +558,8 @@ nav .pagenav .hidden.inView{
 }
 nav .pagenav .inbox{
   opacity: 0;
-  display: flex;
+  display: grid;
   transition: 1s;
-  flex-direction: column;
   padding-block: 5px 15px;
   max-height: calc(100vh - 60px);
 }
@@ -599,6 +602,7 @@ nav .pagenav .contact{
 nav .pagenav .bar{
   gap: 10px;
   z-index: 2;
+  height: 40px;
   display: flex;
   padding: 0 5px;
   font-size: 20px;
@@ -613,6 +617,8 @@ nav .pagenav .inbox .input{
   gap: 0 10px;
   padding: 5px;
   flex-wrap: wrap;
+  min-height: 70px;
+  height: fit-content;
   border-radius: 16px;
   align-self: flex-end;
   width: calc(100% - 10px);
@@ -627,7 +633,6 @@ nav .pagenav .inbox .section{
   padding-block: 20px;
   scrollbar-width: 7px;
   flex-direction: column;
-  max-height: calc( 100vh - 180px );
   scrollbar-color: rgba(0, 0, 0, 0.15);
   &::-webkit-scrollbar {
     width: 7px;
@@ -906,6 +911,11 @@ nav .contact .button:hover svg{
   svg, nav .links svg{
     width: 22px;
     height: 22px;
+    min-width: 22px;
+    min-height: 22px;
+  }
+  .footer h1{
+    font-size: 1.3em;
   }
   .footer span{
     width: 100%;
@@ -922,6 +932,8 @@ nav .contact .button:hover svg{
   svg, nav .links svg{
     width: 21px;
     height: 21px;
+    min-width: 21px;
+    min-height: 21px;
   }
   .footer{
     flex-direction: column;
