--- a/src/app/settings/page.module.css
+++ b/src/app/settings/page.module.css
@@ -15,7 +15,7 @@
   border-radius: 25px;
   justify-self: center;
   flex-direction: column;
-  background-color: var(--background);
+  background-color: var(--input);
   animation: mask 0.5s linear 1 forwards;
   box-shadow: 0 1px 8px rgba(0, 0, 0, 0.3), 0 2px 10px rgba(0, 0, 0, 0.2);
 }
@@ -83,6 +83,7 @@
   align-self: center;
   border-radius: 25px;
   border-bottom-left-radius: 10px;
+  box-shadow: 0 3px 7px 1px rgb(0, 0, 0 ,0.1);
 }
 .responses{
   margin-top: 20px;
@@ -122,9 +123,6 @@
   padding: 6.5px 15px;
   border-radius: inherit;
 }
-.updator .input:hover{
-  box-shadow: inset 0 3px 5px rgb(0, 0, 0 ,0.1);
-}
 .updator p{
   z-index: 1;
   top: -12px;
@@ -132,15 +130,15 @@
   transition: 0.5s;
   position: absolute;
   padding-inline: 15px;
-  border-bottom-left-radius: 10px;
+  background-color: var(--input);
   border-bottom-right-radius: 3px;
-  background-color: var(--background);
-  box-shadow: 0 0 2px 2px var(--background);
+  border-bottom-left-radius: 10px;
+  box-shadow: 0 0 2px 2px var(--input);
 }
 .updator button{
   gap: 10px;
   display: flex;
-  transition: 0.2s;
+  transition: 0s;
   padding: 7px 10px;
   width: fit-content;
   padding-left: 17px;
@@ -161,8 +159,7 @@
   transition: 1s width, 1s padding, 0.5s background-color;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 2px 3px rgba(0, 0, 0, 0.2);
 }
-.button:hover,
-.updator button:hover{
+.button:hover{
   color:rgb( 50, 50, 50);
   background-color: rgb(250, 234, 204);
 }
@@ -175,10 +172,12 @@
   row-gap: 10px;
   font-weight: 600;
   transition: 0.2s;
-  border-radius: 15px;
+  min-height: 72.5px;
+  border-radius: 20px;
   flex-direction: column;
   color: rgb(55, 45, 34);
-  background-color: rgba(255, 247, 242, 0.85);
+  border-bottom-left-radius: 5px;
+  background-color: var(--pageNav);
   box-shadow: 0 1px 4px rgb(163, 146, 128), 0 0 3px rgb(163, 146, 128);
 }
 .setts:hover{
@@ -192,9 +191,10 @@
   cursor: default;
   padding: 3px 15px;
   position: absolute;
-  border-radius: 15px;
+  border-radius: 5px;
   color: rgb(246, 240, 209);
-  background-color: rgb(159, 118, 160);
+  border-top-right-radius: 15px;
+  background-color: var(--deepSweetPurple);
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 2px 3px rgba(0, 0, 0, 0.2);
 }
 .mask{
@@ -258,7 +258,7 @@
   padding-top: 10px;
   align-self: center;
   min-width: calc(100% + 30px);
-  box-shadow: 0px -4px 7px var(--background);
+  box-shadow: 0px -4px 7px var(--input);
 }
 .reco{
   padding: 15px;
@@ -283,6 +283,23 @@
   justify-content: center;
   background-color: var(--mild-dark);
 }
+.logout{
+  top: 0;
+  gap: 10px;
+  display: flex;
+  padding: 5px 20px;
+  color: var(--error);
+  border-radius: 25px;
+  background-color: var(--noti);
+  transition: 0.5s all, 0.75s top;
+  border-bottom-left-radius: 7.5px;
+  border: solid rgb(237, 62, 62) 2px;
+  box-shadow: 0 3px 7px 1px rgb(0, 0, 0 ,0.1);
+  background-image: linear-gradient( to bottom, transparent , rgba( 0, 0, 0, 0.075));
+}
+.logout:hover{
+  top: -7px;
+}
 @media screen and (max-width: 650px) {
   .updator{
     top: auto;
@@ -294,7 +311,6 @@
     min-height: 300px;
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
-    background-color: var(--background);
     border-bottom: solid var(--changingPurple) 3px;
     box-shadow: 0 -7px 8px rgba(0, 0, 0, 0.3), 0 -8px 10px rgba(0, 0, 0, 0.2);
   }
